--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h1 {
     font-style: normal;
     text-align: center;
     font-size: 45px;
-    color: hotpink;
+    color: lightpink;
     margin-top: 30px;
     position:fixed;
     top: 40%;
@@ -80,7 +80,7 @@ button {
 h2 {
     text-align: center;
     size: 400px;
-    color: hotpink;
+    color: lightpink;
     font-family: "cabin-sketch-regular", sans-serif;
     font-weight: 400;
     font-style: normal;
